tools/gd/src/git/snapshots/gd__git__diff__tests__snapshot_permission_only_change.snap
---
source: gd/src/git/diff.rs
expression: parse(diff)
---
[
    DiffFile {
        old_path: Some(
            "script.sh",
        ),
        new_path: Some(
            "script.sh",
        ),
        status: Modified,
        hunks: [],
    },
]
